deploy/k8s/overlays/prod/patch-aspnetcore-environment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: myapp-apps
spec:
  template:
    spec:
      containers:
        - name: auth-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: billing-service
  namespace: myapp-apps
spec:
  template:
    spec:
      containers:
        - name: billing-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crm-service
  namespace: myapp-apps
spec:
  template:
    spec:
      containers:
        - name: crm-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-service
  namespace: myapp-apps
spec:
  template:
    spec:
      containers:
        - name: inventory-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-service
  namespace: myapp-apps
spec:
  template:
    spec:
      containers:
        - name: orders-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: purchasing-service
  namespace: myapp-apps
spec:
  template:
    spec:
      containers:
        - name: purchasing-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sales-service
  namespace: myapp-apps
spec:
  template:
    spec:
      containers:
        - name: sales-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: myapp-apps
spec:
  template:
    spec:
      containers:
        - name: gateway
