deploy/k8s/overlays/prod/patch-gateway-ingress-letsencrypt.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway
  namespace: myapp-apps
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    cert-manager.io/issuer: null
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - api.replace-with-real-domain.com
      secretName: gateway-tls
  rules:
    - host: api.replace-with-real-domain.com
